SLING-12714 - Impementation of OidcAuthenticationHandler (#14)
* minor improvements: add nullable and notnull annotations, defense against NPE

* docs: record Microsoft OIDC as validated

* first commit of auth handler

* fix on main.json

* fix on main.json

* auth handler provision users and authenticate users. Profile not correcly provisioned.

* added redirect management

* Set up Maven build with GH actions (#2)

* modified org.apache.jackrabbit version and fix on main.json as suggested by rmuntean

* Added TokenUpdate service to allow to perform custom update on login token.

* Fixed IT Test.

* renamed TokenUpdate class to LoginCookieManager

* Exported spi, defined serviceRank, added support for groups

* minor improvements: add nullable and notnull annotations, defense against NPE

* Set up Maven build with GH actions (#2)

* ci: only run the test phase

The package phase downloads the SNAPSHOT version of the Sling Starter and becomes rate limited.

* Adding AuthenticationHandler (#1)

* docs: record Microsoft OIDC as validated

* first commit of auth handler

* fix on main.json

* fix on main.json

* auth handler provision users and authenticate users. Profile not correcly provisioned.

* added redirect management

* modified org.apache.jackrabbit version and fix on main.json as suggested by rmuntean

* Added TokenUpdate service to allow to perform custom update on login token.

* Fixed IT Test.

---------

Co-authored-by: Robert Munteanu <rombert@apache.org>

* fix imports after merge, removed old files

* removed OidcBearerTokenAuthenticationHandler

* Exported some JcrUserHomeOAuthTokenStore and required dependencies interfaces and classes

* Added support for pkce in Authorization Code flow

* Revert "Added support for pkce in Authorization Code flow"

This reverts commit baa622c083db53635476974d7b9e8dcd3d3095e7.

* Removed classes added to spi to reimplement services that uses sling-common-crypto

* Added first implementation of OidcAuthenticationHand