@@ -16,7 +16,6 @@
  */
 package org.apache.sling.auth.oauth_client;
 
-import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
@@ -78,17 +77,23 @@ class AuthorizationCodeFlowIT {
     private static final String CRYPTO_SERVICE_PID = JasyptStandardPbeStringCryptoService.class.getName();
     
     private static final String OIDC_CONFIG_PID = OidcConnectionImpl.class.getName();
+    private static final int MAX_RETRY = 10;
     private static SupportBundle supportBundle;
 
+    private static final String OIDC_AUTHENTICATION_HANDLER_PID = "org.apache.sling.auth.oauth_client.impl.OidcAuthenticationHandler";
+    private static final String SLING_AUTHENTICATOR_PID = "org.apache.sling.engine.impl.auth.SlingAuthenticator";
+    private static final String SYNC_HANDLER_PID = "org.apache.jackrabbit.oak.spi.security.authentication.external.impl.DefaultSyncHandler";
+    private static final String EXTERNAL_LOGIN_MODULE_FACTORY_PID = "org.apache.jackrabbit.oak.spi.security.authentication.external.impl.ExternalLoginModuleFactory";
+    public static final String TEST_PATH = "/content/test-1";
     private KeycloakContainer keycloak;
     private SlingClient sling;
+    private SlingClient slingUser;
 
     private int keycloakPort;
 
-    private List<String> configPidsToCleanup = new ArrayList<>();
+    private final List<String> configPidsToCleanup = new ArrayList<>();
     private int slingPort;
 
-    
     @BeforeAll
     static void createSupportBundle(@TempDir Path tempDir) throws IOException {
         
@@ -118,6 +123,7 @@ class AuthorizationCodeFlowIT {
 
         slingPort = Integer.getInteger("sling.http.port", 8080);
         sling = SlingClient.Builder.create(URI.create("http://localhost:" + slingPort), "admin", "admin").disableRedirectHandling().build();
+        slingUser = SlingClient.Builder.create(URI.create("http://localhost:" + slingPort), null, null).disableRedirectHandling().build();
 
         // ensure all previous connections are cleaned up
         sling.adaptTo(OsgiConsoleClient.class).deleteConfiguration(OIDC_CONFIG_PID + ".keycloak");
@@ -188,7 +194,7 @@ class AuthorizationCodeFlowIT {
         String userPath = getUserPath(sling, sling.getUser());
         sling.deletePath(userPath + "/oauth-tokens/" + oidcConnectionName, 200);
         sling.doGet(userPath + "/oauth-tokens/" + oidcConnectionName, 404);
-        
+
         // kick off oidc auth
         SlingHttpResponse entryPointResponse = sling.doGet("/system/sling/oauth/entry-point", List.of(new BasicNameValuePair("c", oidcConnectionName)), 302);
         Header locationHeader = entryPointResponse.getFirstHeader("location");
@@ -205,12 +211,12 @@ class AuthorizationCodeFlowIT {
         String oauthRequestKey = oauthCookie.get().getValue();
         
         // load login form from keycloak
-        HttpClient keycloak = HttpClient.newHttpClient();        
+        HttpClient httpClient = HttpClient.newHttpClient();        
         HttpRequest renderLoginFormRequest = HttpRequest.newBuilder().uri(URI.create(locationHeaderValue)).build();
-        HttpResponse<Stream<String>> renderLoginFormResponse = keycloak.send(renderLoginFormRequest, BodyHandlers.ofLines());
+        HttpResponse<Stream<String>> renderLoginFormResponse = httpClient.send(renderLoginFormRequest, BodyHandlers.ofLines());
         List<String> matchingFormLines = renderLoginFormResponse.body()
             .filter( line -> line.contains("id=\"kc-form-login\""))
-            .collect(Collectors.toList());
+            .toList();
         assertThat(matchingFormLines).as("lines matching form id").singleElement();
         String formLine = matchingFormLines.get(0);
         int actionAttrStart = formLine.indexOf("action=\"") + "action=\"".length();
@@ -228,9 +234,9 @@ class AuthorizationCodeFlowIT {
         HttpRequest.Builder authenticateRequest = HttpRequest.newBuilder(URI.create(actionAttr))
                 .POST(BodyPublishers.ofString(requestBody))
                 .header("content-type", "application/x-www-form-urlencoded");
-        authFormRequestCookies.stream().forEach( cookie -> authenticateRequest.header("cookie", cookie));
+        authFormRequestCookies.forEach(cookie -> authenticateRequest.header("cookie", cookie));
         
-        HttpResponse<String> authenticateResponse = keycloak.send(authenticateRequest.build(), BodyHandlers.ofString());
+        HttpResponse<String> authenticateResponse = httpClient.send(authenticateRequest.build(), BodyHandlers.ofString());
         System.out.println(authenticateResponse.body());
         Optional<String> authResponseLocationHeader = authenticateResponse.headers().firstValue("location");
         assertThat(authResponseLocationHeader).as("Authentication response header").isPresent();
@@ -242,7 +248,7 @@ class AuthorizationCodeFlowIT {
                 var parts = s.split("=");
                 return (NameValuePair) new BasicNameValuePair(parts[0], URLDecoder.decode(parts[1], StandardCharsets.UTF_8));
             })
-            .collect(Collectors.toList());
+            .toList();
         
         List<Header> headers = new ArrayList<>();
         headers.add(new BasicHeader("Cookie", "sling.oauth-request-key=" + oauthRequestKey));
@@ -257,7 +263,7 @@ class AuthorizationCodeFlowIT {
                 new BasicNameValuePair("cryptoServiceName", "sling-oauth")
         ));
         
-        System.err.println(format("Decrypting %s ...", accesToken));
+        System.err.printf("Decrypting %s ...%n", accesToken);
         
         String decryptedToken = sling.doPost("/system/sling/decrypt",  postBody, 200).getContent();
         // validate that the JWT is valid; we trust what keycloak has returned but just want to ensure that
@@ -265,14 +271,209 @@ class AuthorizationCodeFlowIT {
         SignedJWT.parse(decryptedToken);
     }
 
+    @Test
+    void accessTokenIsPresentOnSuccessfulAuthenticationHandlerLogin() throws Exception {
+
+        //Create a sample content with the word "Hello word"
+        Map<String, String> properties = Map.of("text", "Hello World");
+
+        // Convert Map to List<NameValuePair>
+        List<NameValuePair> helloWorld = properties.entrySet().stream()
+                .map(entry -> new BasicNameValuePair(entry.getKey(), entry.getValue()))
+                .collect(Collectors.toList());
+
+        // Create HttpEntity
+        HttpEntity entity = new UrlEncodedFormEntity(helloWorld, StandardCharsets.UTF_8);
+
+        // Use the doPost method with the correct parameters
+        sling.doPost(TEST_PATH, entity, 200, 201);
+
+        // configure Commons Crypto, see https://sling.apache.org/documentation/bundles/commons-crypto.html
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(IV_GENERATOR_REGISTRAR_PID +".sling-oauth", IV_GENERATOR_REGISTRAR_PID,
+                Map.of("algorithm", "SHA1PRNG")
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(PASSWORD_PROVIDER_PID+".sling-oauth", PASSWORD_PROVIDER_PID,
+                Map.of("name", "IT_ENCRYPTION_PASSWORD")
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(CRYPTO_SERVICE_PID+".sling-oauth", CRYPTO_SERVICE_PID,
+                Map.of("algorithm", "PBEWITHHMACSHA512ANDAES_256", "names", "sling-oauth")
+        ));
+
+        // configure token store
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(JcrUserHomeOAuthTokenStore.class.getName(), null,
+                Map.of(
+                        "unused", "unused"
+                )
+        ));
+
+        String oidcConnectionName = "keycloak";
+
+        // configure connection to keycloak
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(OIDC_CONFIG_PID+ ".keycloak",OIDC_CONFIG_PID,
+                Map.of(
+                        "name", oidcConnectionName,
+                        "baseUrl", "http://localhost:" + keycloakPort+"/realms/sling",
+                        "clientId", "oidc-test",
+                        "clientSecret", "wM2XIbxBTLJAac2rJSuHyKaoP8IWvSwJ",
+                        "scopes", "openid"
+                )
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(SLING_AUTHENTICATOR_PID, null,
+                Map.of(
+                        "auth.annonymous", true,
+                        "auth.sudo.cookie", "sling.sudo",
+                        "sling.auth.requirements", new String[]{
+                            "+/libs/granite/oauth/content/authorization",
+                            "+"+ TEST_PATH
+                        }
+                        ,
+                        "auth.http.realm", "Sling (Development)",
+                        "auth.http", "preemptive",
+                        "auth.sudo.parameter", "sudo"
+
+                )
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(SYNC_HANDLER_PID+ ".keycloak", SYNC_HANDLER_PID,
+                Map.of(
+                        "user.expirationTime", "1s",
+                        "user.membershipExpTime","1s",
+                        "user.propertyMapping", new String[]{
+                            "profile/familyName=profile/familyName",
+                            "profile/givenName=profile/givenName",
+                            "rep:fullname=cn",
+                            "profile/email=profile/email",
+                             "oauth-tokens"
+                        },
+                        "user.pathPrefix", "oidc",
+                        "handler.name", "oidc"
+                )
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(EXTERNAL_LOGIN_MODULE_FACTORY_PID+ ".keycloak", EXTERNAL_LOGIN_MODULE_FACTORY_PID,
+                Map.of(
+                            "sync.handlerName", "oidc",
+                            "idp.name", "oidc"
+                )
+        ));
+
+        configPidsToCleanup.add(sling.adaptTo(OsgiConsoleClient.class).editConfiguration(OIDC_AUTHENTICATION_HANDLER_PID+ ".keycloak", OIDC_AUTHENTICATION_HANDLER_PID,
+                Map.of(
+                        "callbackUri", "http://localhost:" + slingPort +TEST_PATH+"/j_security_check",
+                        "path", TEST_PATH,
+                        "defaultConnectionName", oidcConnectionName,
+                        "defaultRedirect", TEST_PATH+".html"
+                )
+        ));
+
+
+        // clean up any existing tokens
+        String userPath = getUserPath(sling, sling.getUser());
+        sling.deletePath(userPath + "/oauth-tokens/" + oidcConnectionName, 200);
+        sling.doGet(userPath + "/oauth-tokens/" + oidcConnectionName, 404);
+
+        // kick off oidc auth
+        // Create a user-agent NameValues to simulate a browser and add it to a list of headers to be sent with the request
+        Header userAgentHeader = new BasicHeader("User-Agent", "Mozilla/5.0");
+
+        SlingHttpResponse entryPointResponse = null;
+        Header locationHeader = null;
+        // Retry the request a few times to ensure that the osgi configuration have been applied
+        for (int count = 0; count < MAX_RETRY; count++) {
+
+            entryPointResponse = slingUser.doGet(TEST_PATH + ".json", null, List.of(userAgentHeader), 302);
+            locationHeader = entryPointResponse.getFirstHeader("location");
+            if (locationHeader.getValue().startsWith("http://localhost:" + keycloakPort)) {
+                // If the location header starts with the keycloak port, we can break out of the loop
+                break;
+            }
+            // Otherwise, we wait for a while and retry
+            Thread.sleep(100);
+
+        }
+        assertThat(locationHeader.getElements()).as("Location header value from entry-point request")
+                .singleElement().asString().startsWith("http://localhost:" + keycloakPort);
+        String locationHeaderValue = locationHeader.getValue();
+
+        DefaultCookieSpec cookieSpec = new DefaultCookieSpec();
+        List<Cookie> cookies = cookieSpec.parse(entryPointResponse.getFirstHeader("set-cookie"), new CookieOrigin("localhost", slingPort, "/", true));
+        Optional<Cookie> oauthCookie = cookies.stream().filter( c -> c.getName().equals("sling.oauth-request-key") )
+                .findFirst();
+
+        assertThat(oauthCookie).as("OAuth cookie set by entry point servlet").isPresent();
+        String oauthRequestKey = oauthCookie.get().getValue();
+
+        // load login form from keycloak
+        HttpClient httpClient = HttpClient.newHttpClient();
+        HttpRequest renderLoginFormRequest = HttpRequest.newBuilder().uri(URI.create(locationHeaderValue)).build();
+        HttpResponse<Stream<String>> renderLoginFormResponse = httpClient.send(renderLoginFormRequest, BodyHandlers.ofLines());
+        List<String> matchingFormLines = renderLoginFormResponse.body()
+                .filter( line -> line.contains("id=\"kc-form-login\""))
+                .toList();
+        assertThat(matchingFormLines).as("lines matching form id").singleElement();
+        String formLine = matchingFormLines.get(0);
+        int actionAttrStart = formLine.indexOf("action=\"") + "action=\"".length();
+        int actionAttrEnd = formLine.indexOf('"', actionAttrStart);
+
+        String actionAttr = formLine.substring(actionAttrStart, actionAttrEnd).replace("&amp;", "&");
+
+        List<String> authFormRequestCookies = renderLoginFormResponse.headers().allValues("set-cookie");
+
+        // Post credentils to keycloak
+        Map<String, String> authData = Map.of("username", "test", "password", "test", "credentialId", "");
+        String requestBody = authData.entrySet().stream()
+                .map( e -> URLEncoder.encode(e.getKey(), StandardCharsets.UTF_8) + "=" + URLEncoder.encode(e.getValue(), StandardCharsets.UTF_8))
+                .collect(Collectors.joining("&"));
+
+        HttpRequest.Builder authenticateRequest = HttpRequest.newBuilder(URI.create(actionAttr))
+                .POST(BodyPublishers.ofString(requestBody))
+                .header("content-type", "application/x-www-form-urlencoded");
+        authFormRequestCookies.forEach(cookie -> authenticateRequest.header("cookie", cookie));
+
+        HttpResponse<String> authenticateResponse = httpClient.send(authenticateRequest.build(), BodyHandlers.ofString());
+        System.out.println(authenticateResponse.body());
+
+        // Assert response from keycloak
+        Optional<String> authResponseLocationHeader = authenticateResponse.headers().firstValue("location");
+        assertThat(authResponseLocationHeader).as("Authentication response header").isPresent();
+
+        //Get on sling with code from keycloak. The login cookie (sling.oidcauth) will be created
+        URI redirectUri = URI.create(authResponseLocationHeader.get());
+        List<NameValuePair> params = Arrays.stream(redirectUri.getRawQuery().split("&"))
+                .map( s -> {
+                    var parts = s.split("=");
+                    return (NameValuePair) new BasicNameValuePair(parts[0], URLDecoder.decode(parts[1], StandardCharsets.UTF_8));
+                })
+                .toList();
+
+        List<Header> headers = new ArrayList<>();
+        headers.add(new BasicHeader("Cookie", "sling.oauth-request-key=" + oauthRequestKey));
+        SlingHttpResponse authenticatedResponse = slingUser.doGet(redirectUri.getRawPath(), params, headers, 302);
+        Header[] cookieHeaders = authenticatedResponse.getHeaders("set-cookie");
+        //retrieve the login-cookie header
+        Header loginCookieHeader = Arrays.stream(cookieHeaders)
+                .filter(header -> header.getValue().contains("sling.oidcauth"))
+                .findFirst()
+                .orElseThrow(() -> new IllegalStateException("No sling.oidcauth found"));
+        // Create a list of header
+        headers = new ArrayList<>();
+        headers.add(new BasicHeader("Cookie", loginCookieHeader.getValue()));
+
+        //Get the page from sling with login cookie
+        slingUser.doGet(TEST_PATH + ".json", new ArrayList<>(), headers, 200);
+    }
+
     private String getUserPath(SlingClient sling, String authorizableId) throws ClientException {
-        
+
         ObjectNode usersJson = (ObjectNode) sling.doGetJson("/home/users", 2, 200);
         for ( Map.Entry<String,JsonNode> user : toIterable(usersJson.fields()) ) {
             JsonNode jsonNode = user.getValue().get("jcr:primaryType");
             if ( jsonNode == null )
                 continue;
-            
+
             if ( jsonNode.isTextual() && "rep:AuthorizableFolder".equals(jsonNode.asText())) {
                 ObjectNode node = (ObjectNode) user.getValue();
                 for ( Map.Entry<String, JsonNode> user2 : toIterable(node.fields()) ) {
@@ -285,7 +486,7 @@ class AuthorizationCodeFlowIT {
                 }
             }
         }
-        
+
         throw new IllegalArgumentException(String.format("Unable to locate path for user with id '%s'", authorizableId));
     }
 
